# TeamPulse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
alembic/versions/: 0002_scheduler_runs.py
docs/: api-spec.md  architecture.md
scripts/: build_macos_app.sh  demo_seed.py
src/openbrief/: cli.py
src/openbrief/api/: dashboard.py
src/openbrief/briefs/: ai_summarizer.py  summarizer.py
src/teampulse/: cli.py  config.py  main.py  models.py  scheduler.py  schemas.py  security.py  worker.py
src/teampulse/api/: briefs.py  dashboard.py  projects.py
src/teampulse/briefs/: ai_summarizer.py  service.py
src/teampulse/connectors/: figma.py
src/teampulse/integrations/: figma.py
src/teampulse/notifications/: discord.py
tests/: test_ai_summarizer.py  test_api_key_auth.py  test_brief_summarizer.py  test_briefs_api.py  test_cli.py  test_dashboard.py  test_discord_notifications.py  test_figma_sync.py  test_notion_webhook.py  test_scheduler.py
